@@ -150,6 +150,25 @@ class TestResultFileText:
         assert res.description[res.get_variable_index("J1.phi")] == "Absolute rotation angle of component"
     
     @testattr(stddist = True)
+    def test_description_not_stored(self):
+        model = Dummy_FMUModelME1([], "CoupledClutches.fmu", os.path.join(file_path, "files", "FMUs", "XML", "ME1.0"), _connect_dll=False)
+        model.initialize()
+        
+        opts = model.simulate_options()
+        opts["result_store_variable_description"] = False
+        
+        result_writer = ResultHandlerFile(model)
+        result_writer.set_options(opts)
+        result_writer.simulation_start()
+        result_writer.initialize_complete()
+        result_writer.integration_point()
+        result_writer.simulation_end()
+        
+        res = ResultDymolaTextual('CoupledClutches_result.txt')
+        
+        assert res.description[res.get_variable_index("J1.phi")] == ""
+    
+    @testattr(stddist = True)
     def test_get_description_unicode(self):
         model = Dummy_FMUModelME1([], "Description.fmu", os.path.join(file_path, "files", "FMUs", "XML", "ME1.0"), _connect_dll=False)
         model.initialize()
@@ -425,6 +444,25 @@ class TestResultFileBinary:
         res = ResultDymolaBinary('CoupledClutches_result.mat')
         
         assert res.description[res.get_variable_index("J1.phi")] == "Absolute rotation angle of component"
+    
+    @testattr(stddist = True)
+    def test_description_not_stored(self):
+        model = Dummy_FMUModelME1([], "CoupledClutches.fmu", os.path.join(file_path, "files", "FMUs", "XML", "ME1.0"), _connect_dll=False)
+        model.initialize()
+        
+        opts = model.simulate_options()
+        opts["result_store_variable_description"] = False
+        
+        result_writer = ResultHandlerBinaryFile(model)
+        result_writer.set_options(opts)
+        result_writer.simulation_start()
+        result_writer.initialize_complete()
+        result_writer.integration_point()
+        result_writer.simulation_end()
+        
+        res = ResultDymolaBinary('CoupledClutches_result.mat')
+        
+        assert res.description[res.get_variable_index("J1.phi")] == ""
     
     @testattr(stddist = True)
     def test_read_all_variables(self):
